[package]
name = "libntpsec-sys"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

description = "libntpsec-sys"

documentation = ""
homepage = ""
repository = "https://github.com/NTPsec-rs/libntpsec-sys"

readme = "README.md"

keywords = []

categories = ["cryptography::cryptocurrencies"]

license = "GPL-3.0+"

[dependencies]