[package]
name = "libntpsec-sys"
version = "0.1.1"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

description = "libntpsec-sys"

documentation = "https://ntpsec-rs.github.io/documentation"
homepage = "https://ntpsec-rs.github.io"
repository = "https://github.com/NTPsec-rs/libntpsec-sys"

readme = "README.md"

keywords = []

categories = ["cryptography"]

license = "GPL-3.0+"

[dependencies]